loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:11: error: 'while' expected but 'if' found.
  if(nbbiscuit>=3){
  ^Poucet2:17: error: '(' expected but ';' found.
  nbbiscuit=0
^